# ChessAI

./: .gitignore  CMakeLists.txt  README.md  chess
include/: Bishop.h  Board.h  GameState.h  King.h  Knight.h  Pawn.h  Piece.h  Queen.h  Rook.h  Type.h
src/: Bishop.cpp  Board.cpp  GameState.cpp  King.cpp  Knight.cpp  Pawn.cpp  Piece.cpp  Queen.cpp  Rook.cpp  main  main.cpp
